Point resources links to index and simplify redirect

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ pre.terminal > code::after {
 				<ul>
 					<li><a href="#home" class="active">home</a></li>
 					<li><a href="/myprojects">projects</a></li>
-					<li><a href="/resources">resources</a></li>
+					<li><a href="/resources/index.html">resources</a></li>
 					<li class="right"><a href="/cli.html">cli</a></li>
 				</ul>
 			</div>
