--- a/project/index.html
+++ b/project/index.html
@@ -181,7 +181,7 @@ a, a:visited {
 				<ul>
 					<li><a href="/">home</a></li>
 					<li><a href="/myprojects" class="active">projects</a></li>
-					<li><a href="/resources">resources</a></li>
+					<li><a href="/resources/index.html">resources</a></li>
 					<li class="right"><a href="/">cli</a></li>
 				</ul>
 			</div>
