--- a/myblogs/index.html
+++ b/myblogs/index.html
@@ -167,7 +167,7 @@
             <ul>
                 <li><a href="/">home</a></li>
                 <li><a href="/myprojects">projects</a></li>
-                <li><a href="/resources">resources</a></li>
+                <li><a href="/resources/index.html">resources</a></li>
                 <li class="right"><a href="/">cli</a></li>
             </ul>
         </div>
