--- a/myblogs/terraform-30.html
+++ b/myblogs/terraform-30.html
@@ -178,7 +178,7 @@ a, a:visited {
 			<ul>
 				<li><a href="/">home</a></li>
 				<li><a href="/myprojects">projects</a></li>
-				<li><a href="/resources">resources</a></li>
+				<li><a href="/resources/index.html">resources</a></li>
 				<li class="right"><a href="/">cli</a></li>
 			</ul>
 		</div>
