--- a/myprojects/index.html
+++ b/myprojects/index.html
@@ -212,7 +212,7 @@ table tbody .code {
 				<ul>
 					<li><a href="/">home</a></li>
 					<li><a href="/myprojects" class="active">projects</a></li>
-					<li><a href="/resources">resources</a></li>
+					<li><a href="/resources/index.html">resources</a></li>
 					<li class="right"><a href="/">cli</a></li>
 				</ul>
 			</div>
